--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -1,5 +1,8 @@
 @import '../../../libs/common-tailwind/src/main.css';
 
+@source "../../../libs/**/*.{ts,tsx}";
+@source "./src/**/*.{ts,tsx}";
+
 @layer base {
   * {
     border-color: var(--color-border);
